# Pygame-Socket-Wrapper

./: LICENSE  README.md  setup.cfg
Pygame_Socket_Wrapper.egg-info/: PKG-INFO  SOURCES.txt
src/: __init__.py
