[metadata]
name = Pygame-Socket-Wrapper
version = 1.0.0
author = NotMEE12
author_email = legominefan@gmail.com
description = Socket Wrapper for easily creating multiplayer games.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NotMEE12/Pygame-Socket-Wrapper
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >= 3.7
include_package_data = True